Forces no negative margins on top level grids to avoid body overflow

--- a/src/collections/grid.less
+++ b/src/collections/grid.less
@@ -28,8 +28,8 @@
 }
 
 body > .ui.grid {
-  margin-left: 0%;
-  margin-right: 0%;
+  margin-left: 0% !important;
+  margin-right: 0% !important;
 }
 
 .ui.grid:after,
